--- a/app/views/index.html
+++ b/app/views/index.html
@@ -1,11 +1,10 @@
 <div ui-view="header"></div>
-<section class="dashboard-page ng-scope">
+<section class="dashboard-page">
     <div ui-view="sidebar"></div>
     <!-- uiView:  -->
     <section id="body-container">
         <section ng-show="appPModule == 'dashboard'" ng-controller="dashboardController" ng-include="'app/views/dashboard/dashboard.html'">...</section>
-        <!--<section ng-show="appPModule == 'customers'" ng-controller="customerController" ng-include="'app/views/customers/customers.html'">...</section>-->
-        <div class="conter-wrapper" ng-show="appPModule == 'customers'" ng-controller="customerController" ng-include="'app/views/customers/customers.html'">...</div>
+        <div class="conter-wrapper" ng-if="appPModule == 'customers'" ng-controller="customerController" ng-include="'app/views/customers/customers.html'">...</div>
         <section ng-if="appPModule == 'customer' && appPAction" ng-controller="customerActionController" ng-include="'app/views/customers/customerAction.html'">...</section>
 
     </section>
